--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <nav id="navbar">
       <div id="logo">
-        <img src="/img/logo1.png" alt="QuickMeal.com" />
+        <img src="img/logo1.png" alt="QuickMeal.com" />
       </div>
       <ul>
         <li class="item"><a href="#home">Home</a></li>
