--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <nav id="navbar">
       <div id="logo">
-        <img src="img/logo1.png" alt="QuickMeal.com" />
+        <img src="logo1.png" alt="QuickMeal.com" />
       </div>
       <ul>
         <li class="item"><a href="#home">Home</a></li>
@@ -39,7 +39,7 @@
       <h1 class="h-primary center">Our Services</h1>
       <div id="services">
         <div class="box">
-          <img src="img/img1.png" alt="" />
+          <img src="img1.png" alt="" />
           <h2 class="h-secondary center">Food Catering</h2>
           <p class="center">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa
@@ -48,7 +48,7 @@
           </p>
         </div>
         <div class="box">
-            <img src="img/img2.png" alt="" />
+            <img src="img2.png" alt="" />
             <h2 class="h-secondary center">Bulk Ordering</h2>
             <p class="center">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa
@@ -57,7 +57,7 @@
             </p>
           </div>
           <div class="box">
-            <img src="img/img3.png" alt="" />
+            <img src="img3.png" alt="" />
             <h2 class="h-secondary center">Home Delivery</h2>
             <p class="center">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa
@@ -70,16 +70,16 @@
       <h1 class="h-primary center">Our Clients</h1>
       <div id="clients">
         <div class="client-item">
-          <img src="img/logo11.png" alt="Our Client">
+          <img src="logo11.png" alt="Our Client">
         </div>
         <div class="client-item">
-          <img src="img/logo12.png" alt="Our Client">
+          <img src="logo12.png" alt="Our Client">
         </div>
         <div class="client-item">
-          <img src="img/logo13.png" alt="Our Client">
+          <img src="logo13.png" alt="Our Client">
         </div>
         <div class="client-item">
-          <img src="img/logo14.png" alt="Our Client">
+          <img src="logo14.png" alt="Our Client">
         </div>
         </div>
       </div>
